--- a/Material/01 - HTML Básico/exercicio.html
+++ b/Material/01 - HTML Básico/exercicio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 1º EXERCÍCIO HTML</title>
+    <title> Desafio HTML Básico </title>
 </head>
 <body>
     <h1> Wilton Lira Martins </h1>
@@ -36,10 +36,5 @@
         <li> Python </li>
         <li> Linguagem C </li>
     </ul>
-
-
-
-
-    
 </body>
 </html>
