--- a/Aulas/02 - CSS Básico/14 - fontes.html
+++ b/Aulas/02 - CSS Básico/14 - fontes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Fontes </title>
-    <link href="style4.css" rel="stylesheet">
+    <link href="style_fontes.css" rel="stylesheet">
 </head>
 <body>
     <p>
