--- a/Aulas/02 - CSS Básico/17 - listas.html
+++ b/Aulas/02 - CSS Básico/17 - listas.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Listas </title>
-    <link href="style6.css" rel="stylesheet">
+    <title> Listaas </title>
 </head>
 <body>
     <ul>
@@ -18,8 +17,5 @@
         <li> Item 2 </li>
         <li> Item 3 </li>
     </ol>
-
-
-
 </body>
 </html>
