--- a/Aulas/02 - CSS Básico/17 - listas.html
+++ b/Aulas/02 - CSS Básico/17 - listas.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Listaas </title>
+    <title> Listas </title>
+    <link href="style_listas.css" rel="stylesheet">
+    
 </head>
 <body>
     <ul>
