atualização do curso

--- a/Aulas/01 - HTML Básico/03 - titulo_e_paragrafos.html
+++ b/Aulas/01 - HTML Básico/03 - titulo_e_paragrafos.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Título e Parágrafo </title>
 </head>
+
 <body>
     <h1> Título </h1>
     <h2> Sub-título </h2>
 
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corporis magnam delectus eveniet asperiores labore neque iusto explicabo laborum dolores esse fuga quasi consequatur vel quod, deserunt est aperiam. Obcaecati.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad illum unde exercitationem non quisquam, labore nostrum. Vitae, nobis accusantium sint eius similique fugiat quibusdam alias perferendis amet, quisquam distinctio tempora.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo dolore labore aperiam nobis atque, architecto voluptas necessitatibus. Enim amet doloribus fugiat rerum assumenda. Non, adipisci ea! Quas excepturi est veniam?
-        
+    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis corporis magnam delectus eveniet asperiores
+        labore neque iusto explicabo laborum dolores esse fuga quasi consequatur vel quod, deserunt est aperiam.
+        Obcaecati.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad illum unde exercitationem non quisquam, labore
+        nostrum. Vitae, nobis accusantium sint eius similique fugiat quibusdam alias perferendis amet, quisquam
+        distinctio tempora.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Explicabo dolore labore aperiam nobis atque,
+        architecto voluptas necessitatibus. Enim amet doloribus fugiat rerum assumenda. Non, adipisci ea! Quas excepturi
+        est veniam?
+
     </p>
-    
+
 </body>
+
 </html>
