--- a/Aulas/01 - HTML Básico/exercicio.html
+++ b/Aulas/01 - HTML Básico/exercicio.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Desafio HTML Básico </title>
 </head>
+
 <body>
     <h1> Wilton Lira Martins </h1>
     <strong> Cidade: </strong> Oiapoque <br>
     <strong> Telefone: </strong> 96 98809-6237 <br>
-    <strong> Email: </strong> <a href="mailto:wiltonliramartins@protonmail.com"> wiltonliramartins@protonmail.com </a> <br>
+    <strong> Email: </strong> <a href="mailto:wiltonliramartins@protonmail.com"> wiltonliramartins@protonmail.com </a>
+    <br>
     <hr>
     <br><br>
     <h2> Objetivo </h2>
@@ -23,11 +26,12 @@
     MICROLINS <br><br><br>
 
     <h2> Experiência</h2> <br><br>
-    <img src="Imagens/manutencao.jpeg" alt = "Manutenção de Computadores" width="300">
+    <img src="Imagens/manutencao.jpeg" alt="Manutenção de Computadores" width="300">
     <strong> Técnico em Manutenção de Computadores e Notebooks. </strong> <br> <br>
-    Faço Manutenção geral, em Computadores e Notebooks, instalando todos os tipo de programas que o cliente desejar, faço reposição de peças em geral. <br> <br>
+    Faço Manutenção geral, em Computadores e Notebooks, instalando todos os tipo de programas que o cliente desejar,
+    faço reposição de peças em geral. <br> <br>
 
-    <img src="Imagens/webdesign.jpeg" alt = "WebDesign">
+    <img src="Imagens/webdesign.jpeg" alt="WebDesign">
     <strong> WebDesign</strong> <br>
     Tenho conhecimento em WebDesign, criando logos, artes, banner.<br><br><br>
 
@@ -37,4 +41,5 @@
         <li> Linguagem C </li>
     </ul>
 </body>
+
 </html>
