--- a/Aulas/02 - CSS Básico/curriculo.html
+++ b/Aulas/02 - CSS Básico/curriculo.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Currículo HTML </title>
 </head>
+
 <body>
     <h1> Wilton Lira Martins </h1>
     <strong> Cidade: </strong> Oiapoque <br>
     <strong> Telefone: </strong> (96) 98809-6237 <br>
-    <strong> Email: </strong> <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top"> wiltonliramartins@protonmail.com </a>
+    <strong> Email: </strong> <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">
+        wiltonliramartins@protonmail.com </a>
     <hr>
     <br><br>
     <h2> Objetivo </h2>
@@ -24,7 +27,8 @@
 
     <h2> Experiência </h2>
     <img src="Imagens/manutencao.jpeg" width="200px"> <strong> Técnico em Manutenção de Computadores </strong><br>
-    Faço Manutenção geral, em Computadores e Notebooks, instalando todos os tipo de programas que o cliente desejar, faço reposição de peças em geral.<br>
+    Faço Manutenção geral, em Computadores e Notebooks, instalando todos os tipo de programas que o cliente desejar,
+    faço reposição de peças em geral.<br>
 
     <img src="Imagens/webdesign.jpeg" width="200px"> <strong> Web Design </strong> <br>
     Tenho conhecimento em WebDesign, criando logos, artes, banner.<br><br>
@@ -40,4 +44,5 @@
 
 
 </body>
+
 </html>
