--- a/Aulas/03 - CSS Intermediário/aula 02 - overflow.html
+++ b/Aulas/03 - CSS Intermediário/aula 02 - overflow.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> OVERFLOW </title>
     <style type="text/css">
-        #container{
+        #container {
             color: yellow;
             background-color: blue;
             width: 300px;
             height: 100px;
-            overflow:auto;
+            overflow: auto;
         }
     </style>
 </head>
+
 <body>
     <div id="container">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut voluptates aspernatur delectus amet sunt eveniet veritatis porro recusandae sapiente quibusdam omnis corrupti aliquid repellendus, quae debitis, suscipit accusantium tenetur assumenda!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut voluptates aspernatur delectus amet sunt eveniet
+        veritatis porro recusandae sapiente quibusdam omnis corrupti aliquid repellendus, quae debitis, suscipit
+        accusantium tenetur assumenda!
     </div>
 </body>
+
 </html>
