--- a/Aulas/03 - CSS Intermediário/aula 07 - viewport.html
+++ b/Aulas/03 - CSS Intermediário/aula 07 - viewport.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Estrutura Básica HTML </title>
+    <title> ViewPort</title>
+    <style>
+
+
+    </style>
 </head>
 
 <body>
