atualização do curso

--- a/Aulas/03 - CSS Intermediário/aula 07 - viewport.html
+++ b/Aulas/03 - CSS Intermediário/aula 07 - viewport.html
@@ -4,15 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> ViewPort</title>
+    <title> ViewPort </title>
     <style>
-
-
+        img {
+            width: 400px;
+        }
     </style>
 </head>
 
 <body>
+    <img src="../Imagens/background.jpg">
 
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia ab recusandae aspernatur laborum. Totam, harum?
+        Neque vitae similique voluptas rem odio. Repudiandae voluptatem quisquam nesciunt consequatur sed eveniet et
+        aliquam!
+    </p>
 </body>
 
 </html>
