--- a/Aulas/03 - CSS Intermediário/aula 01 - display.html
+++ b/Aulas/03 - CSS Intermediário/aula 01 - display.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> DISPLAY </title>
+    <title> Display </title>
     <style type="text/css"></style>
 </head>
 
