--- a/Aulas/Projetos do Curso/01 - Página de Captura/index.html
+++ b/Aulas/Projetos do Curso/01 - Página de Captura/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="./imagens/ico.png" type="image/png">
+    <title> Workshop </title>
+    <link href="./css/style.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="container">
+        <header>
+            <h1 class="title"> PARTICIPE DO WORKSHOP QUE VAI MUDAR SEU NEGÓGIO </h1>
+        </header>
+    </div>
 </body>
-</html>
+</html> 
