atualização do curso

--- a/Aulas/Aula 06 - JavaScript Intermediário/Aula 10 - Tirando duvidas dos parenteses nas funções/index.html
+++ b/Aulas/Aula 06 - JavaScript Intermediário/Aula 10 - Tirando duvidas dos parenteses nas funções/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <script>
+        function ret3() {
+            console.log(3)
+            return 5
+        }
+
+    </script>
 </head>
 <body>
-    <script src="script_test.js"></script>
+    <h1 onClick="ret3()"> clique em mim </h1>
 </body>
 </html>
