--- a/Aulas/06 - JavaScript Intermediário/Exemplo 01 - Página para Sorteio/index.html
+++ b/Aulas/06 - JavaScript Intermediário/Exemplo 01 - Página para Sorteio/index.html
@@ -5,25 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
+        
         function Sortear() {
             let pessoas = ['Wilton', 'Martins', 'César', 'Ana', 'Zilda']
             let np = pessoas.length
             let ns = Math.floor(Math.random() * np)
-            let h1 = document.getElementById('title')
-            h1.innerHTML = pessoas[ns]
-            console.log(ns)
-        }
-
-
-
+            document.getElementById('d').innerHTML = pessoas[ns]
+        } 
     </script>
-
-
-
-
 </head>
 <body>
-    <h1 id="title"> </h1>
+    <h1 id="d"> </h1>
     <button onclick="Sortear()"> Sortear </button>
 </body>
 </html>
