--- a/Aulas/07 - HTML Avançado/Aula 01.1 - Atributos Personalizados - Parte 01.1/index.html
+++ b/Aulas/07 - HTML Avançado/Aula 01.1 - Atributos Personalizados - Parte 01.1/index.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="title"> Olá Mundo </h1>
+    <ul id="lista" num = '1000'>
 
-    <script src="n_script.js"></script>
+    </ul>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
