--- a/Aulas/07 - HTML Avançado/Aula 03 - Video/index.html
+++ b/Aulas/07 - HTML Avançado/Aula 03 - Video/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 id="title"> Olá Mundo </h1>
-
-    <script src="n_script.js"></script>
+    
+    <video src="./video.m4v" width="800" controls  muted loop poster="./logo teste.png" preload="auto"></video>
 </body>
 </html>
+
+
