atualização das aulas

--- a/Aulas/06 - JavaScript Intermediário/Exemplo 02 - Timer e Intervalo/index.html
+++ b/Aulas/06 - JavaScript Intermediário/Exemplo 02 - Timer e Intervalo/index.html
@@ -20,6 +20,6 @@
 </head>
 <body>
     <h1> Título </h1>
-    <input onclick="mudarTexto()" type="submit" value="Mudar"
+    <input onclick="mudarTexto()" type="submit" value="Mudar">
 </body>
 </html>
