--- a/Aulas/06 - JavaScript Intermediário/Aula 14 - JSON/index.html
+++ b/Aulas/06 - JavaScript Intermediário/Aula 14 - JSON/index.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> JSON </title>
 </head>
 <body>
-    <div>
-        <h1 id="h"> Titulo 01 </h1>
-    </div>
-
-
-    <script src="n_script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
