--- a/Aulas/07 - HTML Avançado/Aula 06 - iFrame/pag2.html
+++ b/Aulas/07 - HTML Avançado/Aula 06 - iFrame/pag2.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title> Página 2</title>
 </head>
 <body>
-    <div>
-        <h1 id="h"> Titulo 01 </h1>
-    </div>
-
-
-    <script src="n_script.js"></script>
+    <p> Esta é a página 2, modificado </p>
 </body>
 </html>
